inst/resources/gridlayout.css
.grid_panel {
  --card-padding: 0.8rem;
  box-sizing: border-box;
  overflow: hidden;
  display: grid;
  grid-template-areas: "title"
                       "content";
  /* When there's no title the column will dissapear */
  grid-template-rows: min-content 1fr;
}

.grid_panel .title-bar {
  grid-area: title;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: start;
  align-items: center;
  border-bottom: 1px solid rgba(0,0,0,0.125);
  padding: calc(var(--card-padding)/2) var(--card-padding);
}
.grid_panel .title-bar > h3 {
  margin: 0;
  height: 100%;
}

.panel-content {
  height: 100%;
  width: 100%;
  padding: var(--card-padding);
  grid-area: content;
}

.grid_panel .shiny-plot-output > img {
  /* The way grid sizing works can throw off the plot sizing in shiny. This
     is because the size of the parent grows to its largest child element.
     Shiny's plot output uses fixed pixel sizing. Shiny tries to update
     these sizes by looking at the parent div's dimensions after a resize.
     When the window has been made smaller, this means that the parent
     element is spilling outside of its box because the plot image size is
     still sitting at a fixed pixel width of the previous size. So when Shiny
     queries the size of the parent it thinks that nothing has changed. By
     setting a max width and height, we make sure the plot always gets shrunk
     to at most the size of the grid element, thus allowing the resize observer
     to work properly.
  */
  max-width: 100%;
  max-height: 100%;
}

/* Only set card styles if we're not using the bslib card component */
.grid_panel:not(.card) {
  box-shadow: 0 0 0.5rem rgb(0 0 0 / 35%);
  border-radius: 0.5rem;
}


.grid_panel.collapsed  {
  height: var(--card-title-height);
  overflow: hidden;
}

.grid_panel.collapsed .panel-content {
  display: none;
}

/* Make everything line up nice and cleanly like it should in the middle */
.title_panel {
  margin: 0;
  height: 100%;
  display: flex;
  align-items: center;
}

/* Makes it so tabpanels work in gridpanels */
.grid_panel .tabbable { height: 100% }
.grid_panel .tabbable > .nav { height: 42px; }
.grid_panel .tabbable .tab-content { height: calc(100% - 42px); }
.grid_panel .tabbable .tab-pane { height: 100%; }

